# moatapp

./: .env.example  .gitignore  DEPLOY.md  HANDOFF.md  MOATION_BACKLOG.md  README.md  TODO_USER.md  UX_PLAN.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_lists_and_leads.py  0003_campaigns.py  0004_messages.py  0005_signals.py  0006_step_channel.py  0007_icp_profiles.py  0008_campaign_scheduled_at.py  0009_domains.py  0010_step_variants.py  0011_campaign_sending_settings.py  0012_campaign_track_opens.py  0013_campaign_groups.py  0014_enrollment_outcome_tags.py  0015_campaign_sequence_settings.py  0016_email_accounts.py  0017_sequence_branches.py  0018_email_account_credentials.py  0019_linkedin_accounts.py  0020_email_account_imap.py  0021_campaign_sender_rotation.py  0022_email_account_warmup_started.py  0023_message_message_id.py  0024_campaign_esp_matching.py  0025_webhooks.py  0026_ab_variant_tracking.py  0027_inbound_messages.py  0028_sequence_templates.py  0029_watchlists.py  0030_user_plan.py  0031_scoring_config.py  0032_enrichment_integrations.py  0033_crm_and_sequence_goal.py  0034_trigger_integrations.py
backend/app/: config.py  db.py  deps.py  llm.py  main.py  plans.py  signal_presets.py
backend/app/models/: __init__.py  campaign.py  campaign_enrollment.py  campaign_group.py  crm_integration.py  domain.py  email_account.py  enrichment_integration.py  icp_profile.py  inbound_message.py  lead.py  lead_list.py  linkedin_account.py  message.py  signal.py  (+10 more)
(+126 files in other folders)
